--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="./assets/bootstrap.css">
     <link rel="stylesheet" href="./assets/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Our Reviews</title>
+    <title>
+        Awesome Reviews</title>
 </head>
 
 <body>
@@ -34,11 +37,11 @@
                 </div>
 
                 <div class="button-container">
-                    <button class="previous-button border-0 bg-transparent">
-                        <img src="./assets/left-chevron (1).png" alt="arrow" width="25" height="25"> </button>
+                    <button class="previous-button border-0 bg-transparent"><i class="fa-solid fa-chevron-left"></i>
+                    </button>
 
-                    <button class="next-button border-0 bg-transparent"><img src="./assets/right-chevron.png"
-                            alt="arrow" width="25" height="25"> </button>
+                    <button class="next-button border-0 bg-transparent"><i
+                            class="fa-solid fa-chevron-right"></i></button>
                 </div>
             </div>
         </main>
