created an array  of object

--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
                 <div class="hr w-50 mx-auto"></div>
             </div>
 
-            <div class="card text-center p-4" style="width: 22em;">
+            <div class="card text-center p-4 shadow-sm p-3 mb-5 bg-body rounded border-0" style="width: 22em;">
                 <div>
-                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle"
+                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle" id="image"
                         style="width: 150px;" alt="Avatar" />
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title fs-5 fw-bold">Card title</h5>
-                    <h6 class="UI">UI DESIGNER</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    <h5 class="card-title fs-5 fw-bold" id="author">Name</h5>
+                    <h6 class="UI" id="job">UI DESIGNER</h6>
+                    <p class="card-text" id="text">Some quick example text to build on the card title and make up
+                        the bulk of the
                         card's content.</p>
                 </div>
 
-                <div class="button-container">
-                    <button class="previous-button border-0 bg-transparent"><i class="fa-solid fa-chevron-left"></i>
+                <div class="button-container d-flex justify-content-between">
+                    <button class="previous-button border-0 bg-transparent "><i class="fa-solid fa-chevron-left"></i>
                     </button>
-
                     <button class="next-button border-0 bg-transparent"><i
                             class="fa-solid fa-chevron-right"></i></button>
                 </div>
