--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <div class="container ">
         <main class="d-flex flex-column justify-content-center align-items-center">
             <div class="mb-3">
-                <h4 class="fs-1">Our Reviews</h4>
+                <h4 class="fs-1">Awesome Reviews</h4>
                 <div class="hr w-50 mx-auto"></div>
             </div>
 
             <div class="card text-center p-4 shadow-sm p-3 mb-5 bg-body rounded border-0" style="width: 22em;">
                 <div>
                     <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle" id="image"
-                        style="width: 150px;" alt="Avatar" />
+                        style="width: 150px;" alt="image" />
                 </div>
                 <div class="card-body">
                     <h5 class="card-title fs-5 fw-bold" id="author">Name</h5>
@@ -38,9 +38,10 @@
                 </div>
 
                 <div class="button-container d-flex justify-content-between">
-                    <button class="previous-button border-0 bg-transparent "><i class="fa-solid fa-chevron-left"></i>
+                    <button class="previous-button border-0 bg-transparent " id="previousButton"><i
+                            class="fa-solid fa-chevron-left"></i>
                     </button>
-                    <button class="next-button border-0 bg-transparent"><i
+                    <button class="next-button border-0 bg-transparent" id="nextButton"><i
                             class="fa-solid fa-chevron-right"></i></button>
                 </div>
             </div>
