added extra stuff details 'Micheal'

--- a/index.html
+++ b/index.html
@@ -25,16 +25,15 @@
             </div>
 
             <div class="card text-center p-4 shadow-sm p-3 mb-5 bg-body rounded border-0" style="width: 22em;">
-                <div>
+                <div class="image-section">
                     <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle" id="image"
                         style="width: 150px;" alt="image" />
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title fs-5 fw-bold" id="author">Name</h5>
+                    <h5 class="card-title fs-5 fw-bold" id="author">Micheal</h5>
                     <h6 class="UI" id="job">UI DESIGNER</h6>
-                    <p class="card-text" id="text">Some quick example text to build on the card title and make up
-                        the bulk of the
-                        card's content.</p>
+                    <p class="card-text" id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
 
                 <div class="button-container d-flex justify-content-between">
