--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="container ">
         <main class="d-flex flex-column justify-content-center align-items-center">
             <div class="mb-3">
-                <h4 class="fs-1">Awesome Reviews</h4>
+                <h4 class="fs-1">Awesome Review</h4>
                 <div class="hr w-50 mx-auto"></div>
             </div>
 
-            <div class="card text-center p-4 shadow-sm p-3 mb-5 bg-body rounded border-0" style="width: 22em;">
+            <div class="card text-center p-4 shadow p-3 mb-5 bg-body rounded" style="width: 22em;">
                 <div class="image-section">
                     <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle" id="image"
                         style="width: 150px;" alt="image" />
